# makosync

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: dolphin-events-relay.md  dolphin-latency.md  ingest-contract.md  mm-import-relay.md
samples/: 004-000-001A-0001.do4  004-000-001A-0010.do4  004-000-00F0001.do3  004-000-00F0010.do3  004_Event__Heat_1_Race_1_5_26_2026_14_39.csv
src/dolphinsync/: __init__.py  __main__.py  client.py  config.py  gui.py  parser.py  updater.py  watcher.py
src/makosync/: __init__.py  __main__.py  client.py  config.py  gui.py  manager_watcher.py  mdb_reader.py  mm_import.py  mm_watcher.py  notify.py  parser.py  updater.py  watcher.py
src/makosync/tools/: README.md
tests/: test_client_pending.py  test_client_url.py  test_dolphin_events.py  test_e2e_local.py  test_manager_watcher.py  test_mdb_reader.py  test_mm_import.py  test_mm_watcher.py  test_notify.py  test_parser.py  test_updater.py  test_watcher_retry.py
