[project]
name = "makosync"
version = "0.2.0"
description = "Push live swim results to makosmeets — CTS Dolphin files (unofficial) or a Meet Manager .mdb (official)."
requires-python = ">=3.11"
# Stdlib-only runtime. Manager mode (Meet Manager .mdb) reads via the mdbtools
# `mdb-export` binary, which is bundled into the .exe at build time (not a pip
# dependency) — see build/fetch_mdbtools.ps1 and build/build_exe.ps1.
dependencies = []

[project.scripts]
makosync = "makosync.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/makosync"]

[dependency-groups]
dev = ["pytest>=8", "pyinstaller>=6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
